--- a/styles/charadex.css
+++ b/styles/charadex.css
@@ -32,7 +32,7 @@
   --cd-faded-background-color:           #e9e9e9;
 
   /* Background Extras */
-  --cd-body-background-image:              url(https://th.bing.com/th/id/R.6d75615f5c97d0f1ad2ee0ad78579371?rik=zZ9OmHEo4xuH4w&pid=ImgRaw&r=0);
+  --cd-body-background-image:              url(https://wallpaperaccess.com/full/4749318.jpg);
 
   /* ============================================================= */
   /* Text
