--- a/styles/charadex.css
+++ b/styles/charadex.css
@@ -15,7 +15,7 @@
   /* ============================================================= */
   /* Primary Color
   ================================================================ */
-  --cd-primary-color:                    #8aceff;
+  --cd-primary-color:                    #f2819f;
   --cd-primary-text-color:               #fff;
 
   /* ============================================================= */
@@ -32,7 +32,7 @@
   --cd-faded-background-color:           #e9e9e9;
 
   /* Background Extras */
-  --cd-body-background-image:              url(https://wallpaperaccess.com/full/4749318.jpg);
+  --cd-body-background-image:              url(https://th.bing.com/th/id/R.3a151da8d4513a463ee8ba6423b66d78?rik=YGcWT6n6luNuPg&riu=http%3a%2f%2ffc03.deviantart.net%2ffs71%2ff%2f2010%2f275%2f3%2f8%2fmusic_rainbow_by_oobluegirloo-d2zyl0h.jpg&ehk=btmoQNJy3JJjxR3gjMt3ukjoFv1ddS%2bDlRHELYTgOzU%3d&risl=&pid=ImgRaw&r=0);
 
   /* ============================================================= */
   /* Text
